--- a/taifCattle.vbproj
+++ b/taifCattle.vbproj
@@ -157,6 +157,7 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\Basic\Report.vb" />
     <Compile Include="App_Code\Cattle.vb" />
     <Content Include="CPW.aspx" />
     <Content Include="FPW.aspx" />
