--- a/taifCattle.vbproj
+++ b/taifCattle.vbproj
@@ -169,6 +169,7 @@
     <Content Include="pages\Data\CattleManage_Batch.aspx" />
     <Content Include="pages\Data\CattleManage_Detail.aspx" />
     <Content Include="pages\Data\FarmManage.aspx" />
+    <Content Include="pages\Data\HisManage_Batch.aspx" />
     <Content Include="pages\sample\sample.aspx" />
     <Content Include="pages\System\AccountManage.aspx" />
     <Content Include="pages\System\Config.aspx" />
@@ -184,6 +185,8 @@
     <Content Include="_css\fontawesome-all.css" />
     <Content Include="_css\login.css" />
     <Content Include="_css\mp_default.css" />
+    <Content Include="_img\cattle_batch_sample.png" />
+    <Content Include="_img\history_batch_sample.png" />
     <Content Include="_img\logo.png" />
     <Content Include="_js\bootstrap.bundle.js" />
     <Content Include="_js\jquery-3.7.1.js" />
@@ -265,6 +268,13 @@
     <Compile Include="pages\Data\FarmManage.aspx.vb">
       <DependentUpon>FarmManage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\Data\HisManage_Batch.aspx.designer.vb">
+      <DependentUpon>HisManage_Batch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\Data\HisManage_Batch.aspx.vb">
+      <DependentUpon>HisManage_Batch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="pages\sample\sample.aspx.designer.vb">
       <DependentUpon>sample.aspx</DependentUpon>
@@ -357,6 +367,8 @@
     <Content Include="_fonts\fa-solid-900.woff2" />
     <Content Include="_fonts\fa-v4compatibility.woff2" />
     <Content Include="_mp\mp_default.master" />
+    <Content Include="_doc\batch\cattleManage_Batch.xlsx" />
+    <Content Include="_doc\batch\hisManage_Batch.xlsx" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
