--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,7 @@
   <package id="MathNet.Numerics.Signed" version="5.0.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net481" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net481" />
   <package id="NPOI" version="2.7.5" targetFramework="net481" />
   <package id="NSax" version="1.0.2" targetFramework="net481" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net481" />
