--- a/Web.config
+++ b/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
   </system.web>
@@ -41,8 +42,8 @@
 	    <!-- mail setting -->
 	    <add key="MailSMTP" value="smtp.gmail.com" />
 	    <add key="MailPort" value="587" />
-		<add key="MailAccount" value="naifcattle@gmail.com"/>
-		<add key="MailPassword" value="qhecbjdxzyvssqvy"/>
+		<add key="MailAccount" value="naifcattle@gmail.com" />
+		<add key="MailPassword" value="qhecbjdxzyvssqvy" />
 	    <!-- DNS setting-->
 	    <add key="SiteName" value="牛籍管理系統" />
 	    <add key="DNS_Name" value="http://211.22.64.113:82/taifCattle" />
