--- a/taifCattle.vbproj
+++ b/taifCattle.vbproj
@@ -176,6 +176,7 @@
     <Content Include="pages\Data\CattleManage_Batch.aspx" />
     <Content Include="pages\Data\CattleManage_Detail.aspx" />
     <Content Include="pages\Data\FarmManage.aspx" />
+    <Content Include="pages\Data\HisEndManage_Batch.aspx" />
     <Content Include="pages\Data\HisManage_Batch.aspx" />
     <Content Include="pages\sample\sample.aspx" />
     <Content Include="pages\System\AccountManage.aspx" />
@@ -304,6 +305,13 @@
     <Compile Include="pages\Data\FarmManage.aspx.vb">
       <DependentUpon>FarmManage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\Data\HisEndManage_Batch.aspx.designer.vb">
+      <DependentUpon>HisEndManage_Batch.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\Data\HisEndManage_Batch.aspx.vb">
+      <DependentUpon>HisEndManage_Batch.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="pages\Data\HisManage_Batch.aspx.designer.vb">
       <DependentUpon>HisManage_Batch.aspx</DependentUpon>
