--- a/taifCattle.vbproj
+++ b/taifCattle.vbproj
@@ -164,6 +164,7 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="App_Code\Basic\Report.vb" />
+    <Compile Include="App_Code\Basic\ExcelExporter.vb" />
     <Compile Include="App_Code\Cattle.vb" />
     <Content Include="CPW.aspx" />
     <Content Include="FPW.aspx" />
